// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixture.template: shadow only 1`] = `
"<test-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .header_MTUxMz: { color: pink }
        </style>
        <div class="header_MTUxMz">server side rendered shadow dom
            <slot></slot>
        </div>
    </template>
</test-element>"
`;

exports[`Fixture.template: shadow, and delgatefocus false: should still be shadowrootdelegatesfocus="true" 1`] = `
"<test-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .header_MTUxMz: { color: pink }
        </style>
        <div class="header_MTUxMz">server side rendered shadow dom
            <slot></slot>
        </div>
    </template>
    <div>
        <h1>header</h1>
    </div>
</test-element>"
`;

exports[`Fixture.template: shadow, and mode closed: should still be shadowrootmode="open" 1`] = `
"<test-element>
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .header_MTUxMz: { color: pink }
        </style>
        <div class="header_MTUxMz">server side rendered shadow dom
            <slot></slot>
        </div>
    </template>
    <div>
        <h1>header</h1>
    </div>
</test-element>"
`;

exports[`Fixture.template: slot and id 1`] = `
"<test-element id="random">
    <template shadowrootmode="open" shadowrootdelegatesfocus="true">
        <style>
            .header_MTUxMz: { color: pink }
        </style>
        <div class="header_MTUxMz">server side rendered shadow dom
            <slot></slot>
        </div>
    </template>
    <div>
        <h1>header</h1>
    </div>
</test-element>"
`;
